<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/START_TIME"/>
        <TextView
            android:id="@+id/tv_rent_info_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:padding="16dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TENANCY_TERM"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_rent_info_tenancy_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/END_TIME"/>
        <TextView
            android:id="@+id/tv_rent_info_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:padding="16dp"
            />
    </LinearLayout>
    <TextView
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PAY_WAY"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_rent_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_rent_info_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NEXT"
        android:layout_margin="16dp"/>
    </LinearLayout>
</ScrollView>