<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_modify_password"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/OLD_PASSWORD"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edt_old_password"
            android:layout_toRightOf="@+id/tv_modify_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/NEW_PASSWORD"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edt_new_password"
            android:layout_toRightOf="@+id/tv_new_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_re_new_password"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/RE_NEW_PASSWORD"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edt_re_new_password"
            android:layout_toRightOf="@+id/tv_re_new_password"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_modify_password"
        android:layout_width="match_parent"
        android:text="@string/MODIFY_PASSWORD"
        android:textColor="@color/tvWhite"
        android:background="@drawable/shape_button_theme"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
</LinearLayout>