<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_room_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_room_list_rent_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:drawableRight="@drawable/down"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ROOM_TYPE" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/line"
            />

        <TextView
            android:id="@+id/tv_room_list_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:gravity="center"
            android:drawableRight="@drawable/down"
            android:padding="5dp"
            android:text="@string/ROOM_AREA" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/line"
            />
        <TextView
            android:id="@+id/tv_room_list_house_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:drawableRight="@drawable/down"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ROOM_HOUSE_TYPE" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/line"
            />
        <TextView
            android:id="@+id/tv_room_list_rent_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:gravity="center"
            android:drawableRight="@drawable/down"
            android:padding="5dp"
            android:text="@string/ROOM_RENT_SORT" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_room_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>