<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_fund_detail_rent_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROOM_RENT_SORT"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_fund_detail_rent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_fund_detail_rent_lable"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_fund_detail_cash_deposit_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CASH_DEPOSIT"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_fund_detail_cash_deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_fund_detail_cash_deposit_lable"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_fund_detail_service_charge_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SERVICE_CHARGE"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_fund_detail_service_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_fund_detail_service_charge_lable"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_fund_detail_should_pay_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SHOULD_PAY"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:id="@+id/tv_fund_detail_should_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_fund_detail_should_pay_lable"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_fund_detail_next"
        android:layout_width="match_parent"
        android:text="@string/NEXT"
        android:layout_height="wrap_content" />
</LinearLayout>